# yolov11ncnn

./: settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/vip/wqby/yolov11ncnn/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: best.ncnn.param
app/src/main/cpp/: CMakeLists.txt  yolov11.cpp
app/src/main/java/vip/wqby/yolov11ncnn/: MainActivity.java  OutResult.java  yolov11.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/xml/: file_paths.xml
app/src/test/java/vip/wqby/yolov11ncnn/: ExampleUnitTest.java
